<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/my_calculator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3d5c5c"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/calculator_shadow"
        android:layout_width="280dp"
        android:layout_height="420dp"
        android:background="@drawable/calculator_shadow"
        android:elevation="1dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        app:layout_constraintTop_toTopOf="@id/calculator"
        app:layout_constraintStart_toStartOf="@+id/calculator"
        tools:ignore="ContentDescription,HardcodedText"
        android:contentDescription="TODO" />

    <ImageView
        android:id="@+id/calculator"
        android:layout_width="280dp"
        android:layout_height="420dp"
        android:background="@drawable/my_calculator"
        android:elevation="1dp"
        app:layout_constraintBottom_toBottomOf="@id/button2"
        app:layout_constraintTop_toTopOf="@id/buttonClear"
        app:layout_constraintEnd_toEndOf="@+id/buttonAdd"
        app:layout_constraintStart_toStartOf="@+id/button7"
        tools:ignore="ContentDescription,HardcodedText"
        android:contentDescription="TODO" />

    <TextView
        android:id="@+id/shadow_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/casio_calculator"
        android:textColorHighlight="#000000"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        android:elevation="6dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        app:layout_constraintTop_toTopOf="@id/gray_text"
        app:layout_constraintLeft_toLeftOf="@id/gray_text"/>

    <TextView
        android:id="@+id/gray_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/casio_calculator"
        android:textColorHighlight="#FFFFFF"
        android:textColor="#858585"
        android:textSize="18sp"
        android:elevation="6dp"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toBottomOf="@id/calculator"
        app:layout_constraintLeft_toLeftOf="@id/button2"
        app:layout_constraintRight_toRightOf="@id/buttonEqual"/>

    <TextView
        android:id="@+id/displayResult"
        android:layout_width="250dp"
        android:layout_height="75dp"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/my_display"
        android:paddingBottom="8dp"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:textAlignment="textEnd"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/buttonClear"
        app:layout_constraintLeft_toLeftOf="@id/buttonClear"
        tools:text="= 68"
        android:elevation="1dp" />

    <TextView
        android:id="@+id/displayText"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:paddingBottom="8dp"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:textAlignment="textEnd"
        android:textColor="#1C1C1C"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@id/displayResult"
        app:layout_constraintLeft_toLeftOf="@id/displayResult"
        tools:text="(2+2) x 17"
        android:elevation="14dp"/>


    <Button
        android:id="@+id/button5"
        android:elevation="16dp"
        android:layout_width="60dp"
        android:layout_height="35dp"
        android:layout_weight="1"
        android:background="@drawable/my_button"
        android:onClick="numberSmash"
        android:text="@string/Five"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button4"
        android:layout_width="60dp"
        android:layout_height="35dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:background="@drawable/my_button"
        android:onClick="numberSmash"
        android:text="@string/Four"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button5"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button6"
        android:layout_width="60dp"
        android:layout_height="35dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:background="@drawable/my_button"
        android:onClick="numberSmash"
        android:text="@string/Six"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button5"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button8"
        android:layout_width="60dp"
        android:layout_height="35dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:background="@drawable/my_button"
        android:onClick="numberSmash"
        android:text="@string/Eight"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button9"
        android:layout_width="60dp"
        android:layout_height="35dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:background="@drawable/my_button"
        android:onClick="numberSmash"
        android:text="@string/Nine"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/button6"
        app:layout_constraintLeft_toRightOf="@id/button8" />

    <Button
        android:id="@+id/button7"
        android:layout_width="60dp"
        android:layout_height="35dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:background="@drawable/my_button"
        android:onClick="numberSmash"
        android:text="@string/Seven"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/button4"
        app:layout_constraintRight_toLeftOf="@id/button8" />

    <Button
        android:id="@+id/button2"
        android:layout_width="60dp"
        android:layout_height="35dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:background="@drawable/my_button"
        android:onClick="numberSmash"
        android:text="@string/Two"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button5" />

    <Button
        android:id="@+id/button1"
        android:layout_width="60dp"
        android:layout_height="35dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:background="@drawable/my_button"
        android:onClick="numberSmash"
        android:text="@string/One"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintRight_toLeftOf="@id/button2"
        app:layout_constraintTop_toBottomOf="@id/button4" />

    <Button
        android:id="@+id/button3"
        android:layout_width="60dp"
        android:layout_height="35dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:background="@drawable/my_button"
        android:onClick="numberSmash"
        android:text="@string/Three"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintLeft_toRightOf="@id/button2"
        app:layout_constraintTop_toBottomOf="@id/button6" />

    <Button
        android:id="@+id/button0"
        android:layout_width="130dp"
        android:layout_height="35dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:background="@drawable/my_button"
        android:onClick="numberSmash"
        android:text="@string/Zero"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="@id/button1"
        app:layout_constraintTop_toBottomOf="@id/button1" />

    <Button
        android:id="@+id/buttonDecimal"
        android:layout_width="60dp"
        android:layout_height="35dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:background="@drawable/my_button"
        android:onClick="numberSmash"
        android:text="@string/buttonDecimal"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintLeft_toRightOf="@id/button2"
        app:layout_constraintTop_toBottomOf="@id/button3" />

    <Button
        android:id="@+id/buttonSubtract"
        android:layout_width="48dp"
        android:layout_height="35dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:background="@drawable/my_button"
        android:onClick="operatorSmash"
        android:text="@string/Subtract"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/buttonAdd"
        app:layout_constraintLeft_toRightOf="@id/button9" />

    <Button
        android:id="@+id/buttonAdd"
        android:layout_width="48dp"
        android:layout_height="78dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:background="@drawable/my_button"
        android:onClick="operatorSmash"
        android:text="@string/Add"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintBottom_toTopOf="@id/buttonEqual"
        app:layout_constraintStart_toEndOf="@+id/button6" />

    <Button
        android:id="@+id/buttonEqual"
        android:layout_width="48dp"
        android:layout_height="78dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:background="@drawable/my_button"
        android:onClick="equalSmash"
        android:text="@string/Equal"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintLeft_toRightOf="@id/button3"
        app:layout_constraintTop_toBottomOf="@id/button6" />

    <Button
        android:id="@+id/buttonMultiply"
        android:layout_width="60dp"
        android:layout_height="35dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:background="@drawable/my_button"
        android:onClick="operatorSmash"
        android:text="@string/Multiply"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/button9"
        app:layout_constraintStart_toEndOf="@+id/button5" />

    <Button
        android:id="@+id/buttonDivide"
        android:layout_width="60dp"
        android:layout_height="35dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:background="@drawable/my_button"
        android:onClick="operatorSmash"
        android:text="@string/Divide"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/button8"
        app:layout_constraintLeft_toRightOf="@+id/button4" />

    <Button
        android:id="@+id/buttonClear"
        android:layout_width="60dp"
        android:layout_height="35dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:background="@drawable/my_button"
        android:onClick="allClear"
        android:text="@string/Clear"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/button7"
        app:layout_constraintRight_toLeftOf="@id/buttonDivide" />


</androidx.constraintlayout.widget.ConstraintLayout>


    <!--
      <LinearLayout
          android:layout_width="fill_parent"
          android:layout_height="100dp"
          android:layout_margin="15dp"
          android:background="@drawable/rounded_corners_white"
          android:orientation="vertical"> -->